* refactors pipelines/filters * adds VSCode workspace
