# examples/pipelayer_microservice/src/openapi.yaml
@@ -12,10 +12,10 @@ paths:
   /user/{id}:
     get:
       operationId: service.api.user.get
-      parameters:
-        - $ref: "#/components/parameters/id"
       tags:
         - Get User
+      parameters:
+        - $ref: "#/components/parameters/id"
       responses:
         200:
           description: Get User Response
@@ -37,12 +37,12 @@ paths:
                 $ref: "#/components/schemas/500-Error"
   /user:
     get:
-      operationId: service.api.user.get_all
+      operationId: service.api.user.get_users
+      tags:
+        - Get Users
       parameters:
         - $ref: "#/components/parameters/page"
         - $ref: "#/components/parameters/perPage"
-      tags:
-        - Get Users
       responses:
         200:
           description: Get Users Response
@@ -73,6 +73,8 @@ components:
         required: true
         schema:
           type: integer
+          minimum: 1
+          default: 1
     page:
         name: page
         description: The page number for lists
@@ -80,13 +82,19 @@ components:
         required: false
         schema:
           type: integer
+          minimum: 1
+          default: 1
+          example: 1
     perPage:
-        name: perPage
+        name: per_page
         description: The number of records to return per page
         in: query
         required: false
         schema:
           type: integer
+          minimum: 1
+          default: 5
+          example: 5
 
   schemas:
   # REQUEST SCHEMAS
