# examples/pipelayer_microservice/src/service/api/user.py
@@ -8,8 +8,8 @@ from service.config import context
 from service.model.domain_model import DomainModel
 from service.model.response_model import Response
 from service.pipeline.user_pipelines import (find_users_pipeline,
-                                             get_all_users_pipeline,
-                                             get_user_pipeline)
+                                             get_user_pipeline,
+                                             get_users_pipeline)
 
 
 def get_response(model: Union[DomainModel, List[DomainModel]], manifest: Manifest) -> dict:
@@ -18,27 +18,27 @@ def get_response(model: Union[DomainModel, List[DomainModel]], manifest: Manifes
 
 
 @authorize
-def get(id: int):
+def get(**kwargs) -> dict:
     try:
-        user = get_user_pipeline.run(id, context)
+        user = get_user_pipeline.run(kwargs, context)
         return get_response(user, get_user_pipeline.manifest)
     except Exception as e:
         return handle_exception(e)
 
 
 @authorize
-def get_all(users_request):
+def get_users(**kwargs) -> dict:
     try:
-        users = get_all_users_pipeline.run(users_request, context)
-        return get_response(users, get_all_users_pipeline.manifest)
+        users = get_users_pipeline.run(kwargs, context)
+        return get_response(users, get_users_pipeline.manifest)
     except Exception as e:
         return handle_exception(e)
 
 
 @authorize
-def find_users(users_request):
+def find_users(**kwargs) -> dict:
     try:
-        users = find_users_pipeline.run(users_request, context)
+        users = find_users_pipeline.run(kwargs, context)
         return get_response(users, get_user_pipeline.manifest)
     except Exception as e:
         return handle_exception(e)
